--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "bignumber.js": "^9.0.1",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
-    "next": "^11.1.2",
-    "react": "^17.0.2",
+    "next": "11.1.2",
+    "react": "17.0.2",
     "react-countup": "^6.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "web3": "^1.3.6"
   },
   "devDependencies": {
